[workspace]
members = ["./localization-macros", "./localization", "./example", "./localization-build"]
resolver = "3"

[workspace.package]
version = "0.1.5"
edition = "2024"
categories = ["localization", "internationalization"]
description = "t! macro, the easiest way."
license = "MIT"
repository = "https://github.com/neodyland/localization"
readme = "./README.md"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
absolute_paths = "warn"
nursery = { level = "warn", priority = -1 }
