[workspace]
members = ["./localization-macros", "./localization", "./localization-build", "./examples/basic"]
resolver = "3"

[workspace.package]
version = "0.1.6"
edition = "2024"
categories = ["localization", "internationalization"]
keywords = ["localization", "i18n", "translation", "no-std", "proc-macro"]
description = "t! macro, the easiest way."
license = "MIT"
repository = "https://github.com/neodyland/localization"
readme = "./README.md"
rust-version = "1.92"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
absolute_paths = "warn"
nursery = { level = "warn", priority = -1 }
