[package]
name = "localization-build"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/localization-build"
rust-version.workspace = true
publish = ["crates-io"]
include = ["Cargo.toml", "README.md", "build.rs", "src/**"]

[dependencies]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
