[package]
name = "localization-macros"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
documentation = "https://docs.rs/localization-macros"

[dependencies]
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
syn = "2"

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
