[package]
name = "localization"
version = "0.1.1"
edition = "2021"
description = "t! macro, the easiest way."
license = "MIT"
documentation = "https://docs.rs/localization"
repository = "https://github.com/neodyland/localization"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
localization-macros = { path = "../localization-macros", version = "0.1.1" }