[package]
name = "localization"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
license-file.workspace = true
documentation = "https://docs.rs/localization"

[dependencies]
localization-macros = { path = "../localization-macros", version = "0.1.4" }