[package]
name = "localization"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
documentation = "https://docs.rs/localization"
rust-version.workspace = true
publish = ["crates-io"]
include = ["Cargo.toml", "README.md", "build.rs", "src/**"]

[dependencies]
hashbrown = { version = "0.17.0", default-features = false, features = [
    "alloc",
    "default-hasher",
], optional = true }
localization-macros = { path = "../localization-macros", version = "0.1" }

[features]
default = ["std"]
std = []
alloc = ["dep:hashbrown"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
